--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: RegressionVisuals
 Title: What the Package Does (one line, title case)
 Version: 0.0.0.9000
-Authors@R: person("First", "Last", email = "first.last@example.com", role = c("aut", "cre"))
-Description: What the package does (one paragraph).
+Authors@R: person("Mauricio", "Arango", email = "first.last@example.com", role = c("aut", "cre"))
+Description: Set of functions that produces helpful visualizations for regressions.
 Depends: R (>= 3.5.0)
 License: GPL
 Encoding: UTF-8
